--- a/nyhs_update_ocr.info.yml
+++ b/nyhs_update_ocr.info.yml
@@ -2,6 +2,6 @@ name: 'NYHS Update OCR'
 type: module
 description: 'Creates Extracted Text files when missing'
 package: Custom
-core_version_requirement: ^10 || ^11
+core_version_requirement: ^9 || ^10 || ^11
 dependencies:
   - islandora:islandora
